--- a/webpack-project/package.json
+++ b/webpack-project/package.json
@@ -11,6 +11,14 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.12.17",
+        "@babel/plugin-proposal-class-properties": "^7.12.13",
+        "@babel/preset-env": "^7.12.17",
+        "babel-loader": "^8.2.2",
+        "css-loader": "^5.0.2",
+        "node-sass": "^5.0.0",
+        "sass-loader": "^11.0.1",
+        "style-loader": "^2.0.0",
         "webpack": "^5.23.0",
         "webpack-cli": "^4.5.0"
     }
